testathon/cleanup (#12)
* starting cleanup

* fixed collectors logic

* removed resttemplate

* create payment requests uses a builder, fixed tests

* bumped version

* some fix

* removed kotlin deps

* removed guava

* bumped version

* include.NON_Null annotation restored on create payment request

* jackson changes

* test and todo

* version bump

* cleanup

* test fix

* version bumped

* added jackson instruction to ignore unknown fields

* version bump

* added resource token to payment entity

* bump version

Co-authored-by: tl-luca-baggi <luca.baggi@truelayer.com>